# veruna

./: .env  .gitignore  CHANGELOG.md  Cargo.toml
.github/workflows/: main.yml
data/: Cargo.toml
data/entity/: Cargo.toml
data/entity/src/: mod.rs  nodes.rs  prelude.rs  site.rs
data/migration/: Cargo.toml
data/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230516_165813_site_description.rs  m20230605_125504_nodes.rs
data/src/: lib.rs
data/src/migration/: mod.rs
data/src/node/: mod.rs
data/src/page/: mod.rs
data/src/role/: mod.rs
data/src/site/: mod.rs
data/src/users/: mod.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/input/: mod.rs
domain/src/nodes/: implementation.rs  mod.rs
domain/src/pages/: mod.rs
domain/src/roles/: mod.rs
domain/src/sites/: mod.rs  site_kit.rs
domain/src/users/: errors.rs  events.rs  mod.rs  register_user_error.rs  user_id.rs  user_list.rs
domain/src/users/models/: claims.rs  mod.rs
editorjs/: Cargo.toml
editorjs/src/: lib.rs  test.json
editorjs/src/models/: block.rs  data.rs  mod.rs  output.rs  type.rs
entity/: Cargo.toml
entity/src/: component.rs  component_node.rs  host.rs  host_site.rs  mod.rs  node.rs  node_site.rs  prelude.rs  product.rs  site.rs
migration/: Cargo.toml
migration/src/: lib.rs
migrations/2022-03-01-132345_create_products/: up.sql
rbac/: rbac_model.conf
repository/: Cargo.toml
repository/src/: component_node_repository.rs  component_repository.rs  host_repository.rs  host_site_repository.rs  mod.rs  node_repository.rs  site_repository.rs
src/: db.rs  lib.rs  main.rs  models.rs  policy.rs  schema.rs
src/controllers/: main_page_controller.rs  mod.rs  path.rs  product.rs  product_controller.rs
src/errors/: mod.rs
src/handlers/: error_handler.rs  get_current_user.rs  login.rs  mod.rs  register.rs
src/handlers/admin/: mod.rs  sites.rs
src/handlers/page/: mod.rs
src/handlers/site/: mod.rs
src/handlers/user/: mod.rs  models.rs
src/middleware/: admin_api.rs  mod.rs  redirect_slash.rs  static_admin.rs
src/models/: mod.rs  model_list_item.rs
src/repository/: product.rs
src/response/: mod.rs
src/services/: action_service.rs  component_service.rs  db_service.rs  mod.rs  node_site_relation_service.rs  site_service.rs
src/uri/: mod.rs
src/view/: mod.rs
static/: index.html
static/admin/: index.html
templates/: actix.stpl  main_page.stpl  page.stpl  product.stpl
view/: Cargo.toml
view/src/models/: component_item.rs  main_page_view.rs  mod.rs  model_list.rs  model_list_item.rs  product_view.rs
view/templates/: main_page.stpl  node_page.stpl
