[package]
name = "veruna"
version = "1.0.0"
edition = "2021"
description = "Veruna project"
license = "MIT OR Apache-2.0"
authors = ["Alexander Averichev <averichev@yandex.ru>"]
keywords = ["veruna"]
repository = "https://github.com/averichev/veruna"

[workspace]
members = ["domain", "data", "data/migration"]

[dependencies]
veruna-domain = { path = "domain" }
veruna-data = { path = "data" }
actix_trailing_slash_redirect_middleware = { path = "../actix_trailing_slash_redirect_middleware" }
assert-str = "0.1.0"
url = "2.3.1"
actix-web = "4.3.1"
actix-files = "0.6.2"
dotenv = "0.*"
log = "0.*"
env_logger = "0.*"
sailfish = "0.6.0"