[package]
name = "veruna"
version = "1.0.6"
edition = "2021"
description = "Veruna project"
license = "MIT OR Apache-2.0"
authors = ["Alexander Averichev <averichev@yandex.ru>"]
keywords = ["veruna"]
repository = "https://github.com/averichev/veruna"

[workspace]
members = ["domain", "data"]

[dependencies]
veruna-domain = { path = "domain" }
veruna-data = { path = "data" }
assert-str = "0.1.0"
url = "2.3.1"
actix-web = "4.3.1"
actix-files = "0.6.2"
async-trait = "0.1.71"
dotenv = "0.*"
log = "0.*"
env_logger = "0.10.0"
sailfish = "0.8.0"
casbin = "2.0.9"
futures-util = "0.3.28"
uuidv7 = "0.1.1"
serde = "1.0.166"
surrealdb = {version = "1.0.0-beta.9", features = ["kv-rocksdb"]}
argon2 = "0.5.0"
uuid7 = "0.6.4"
termion = "2.0.1"
regex = "1.9.0"
actix-cors = "0.6.4"
actix-web-validator = "5.0.1"
validator = {version = "0.16.1", features = ["derive"]}
derive_more = "0.99.17"
event-listener = "2.5.3"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.7"
linq = "0.0.1-release"
typetag = "0.2.12"
